--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "moment": "^2.29.1",
+    "node-cron": "^3.0.0",
     "puppeteer": "^10.4.0",
     "simple-node-logger": "^21.8.12"
   }
